Bottom spacing fix for text in the cards in the hero section.

--- a/src/pages/Home/Hero/Hero.css
+++ b/src/pages/Home/Hero/Hero.css
@@ -18,12 +18,14 @@
   font-weight: 800;
   font-size: 32px;
 }
+.left-content .text {
+  margin-bottom: 50px;
+}
 .text {
   color: #ffffff;
   font-family: "Segoe UI", sans-serif;
   font-weight: 400;
   font-size: 20px;
-  margin-bottom: 50px;
   margin-top: 25px;
 }
 .hero-section .right-content {
